--- a/index.html
+++ b/index.html
@@ -54,6 +54,11 @@
   <section id="findYourWorstNightmare">
     <h1>Find Your Worst Nightmare</h1>
     <p>Here are your mismatches: </p>
+    <div class="grid3">
+        <div id="firstPic2"></div>
+        <div id="secondPic2"></div>
+        <div id="thirdPic2"></div>
+      </div>
   </section>
 
   <section>
