--- a/public/index.html
+++ b/public/index.html
@@ -1,16 +1,23 @@
 <!DOCTYPE html>
 <html>
 <head>
-<meta name="viewport" content="width=device-width, initial-scale=1"/>
-<link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
-<link href="style.css" rel="stylesheet" type="text/css">
-<title>Mismatch</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <!-- Font-awesome icons -->
+  <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
+  <!-- CSS -->
+  <link href="style.css" rel="stylesheet" type="text/css">
+  <title>Mismatch</title>
 </head>
 
+<!-- NAMING CONVENTIONS
+  classes are 'lowercase'
+  id's are in 'camelCase'
+-->
 <body>
 
-<nav class="navbar" id="navbar">
-  <a id="bars" class="icon icons">
+<!-- Navigation bar -->
+<nav class="topnav" id="topNav">
+  <a href="javascript:void(0);" class="icon" onclick="toggleSwitch()">
     <i class="fa fa-bars"></i>
   </a>
   <a href="#tellUsAboutYou"> <i class="fa fa-heart-broken"></i> Tell Us About You</a>
@@ -18,13 +25,7 @@
   <a href="#oppositeDoAttract">Opposites Do Attract</a>
 </nav>
 
-<nav id="slideMenu">
-  <a href="#" onclick="return false;">Mismatch.com</a><hr/>
-  <a href="#tellUsAboutYou" onclick="return false;">Tell Us About You</a><hr/>
-  <a href="#findYourWorstNightmare" onclick="return false;">Find Your Worst Nightmare</a><hr/>
-  <a href="#OppositeDoAttract">Opposite Do Attract</a><hr/>
-</nav>
-
+<!-- Grid of photos -->
 <div class="grid">
   <section id="tellUsAboutYou">
     <h1>Tell Us About You</h1>
@@ -50,7 +51,6 @@
         </form>
       </div>
   </section>
-
   <section id="findYourWorstNightmare">
     <h1>Find Your Worst Nightmare</h1>
     <p>Here are your mismatches: </p>
@@ -60,7 +60,6 @@
         <div id="thirdPic2"></div>
       </div>
   </section>
-
   <section>
     <h1>Opposite Do Attract</h1>
     <p> Success stories: </p>
@@ -187,5 +186,6 @@
   </div>
 </footer>
 
+<script src="main.js"></script>
 </body>
 </html>
