--- a/public/index.html
+++ b/public/index.html
@@ -46,9 +46,9 @@
     </form>
   </section> <!------------------- END OF SECTION 1 ------------------->
   <!------------------- SECTION 2: BUTTONS WITH USER CHARACTERISTICS ------------------->
-
-
-
+  <section id="userCharacteristicsToggleButtons">
+    <h1>What Are You Like?</h1>
+  </section>
   <!------------------- SECTION 3: MATCHES ------------------->
   <section id="findYourWorstNightmare">
     <h1>Find Your Worst Nightmare</h1>
@@ -60,10 +60,9 @@
     </div>
   </section> <!------------------- END OF SECTION 3 ------------------->
   <!------------------- SECTION 4: SUCCESS STORIES ------------------->
-  <section>
+  <section id="successStories">
     <h1>Opposite Do Attract</h1>
     <p> Success stories: </p>
-
     <div class="grid2">
       <div id="firstPic"></div>
       <div id="secondPic"></div>
