footer and navbar need editing

--- a/public/index.html
+++ b/public/index.html
@@ -26,7 +26,7 @@
 </nav>
 
 <!------------------- GRID WRAPPER ------------------->
-<div class="grid">
+<div class="wrapper">
   <!------------------- SECTION 1: SELF-FILLABLE USER INFO ------------------->
   <section id="userInfo">
     <h1>Tell Us About You</h1>
@@ -66,7 +66,7 @@
   <section id="worstNightmare">
     <h1>Find Your Worst Nightmare</h1>
     <p>Here are your mismatches: </p>
-    <div class="grid3">
+    <div>
       <div id="firstPic2"></div>
       <div id="secondPic2"></div>
       <div id="thirdPic2"></div>
@@ -76,7 +76,7 @@
   <section id="oppositesAttract">
     <h1>Opposite Do Attract</h1>
     <p> Success stories: </p>
-    <div class="grid2">
+    <div class="successgrid">
       <div id="firstPic"></div>
       <div id="secondPic"></div>
       <div id="thirdPic"></div>
@@ -93,7 +93,7 @@
     <p>We are not responsible for the outcomes of your dates, unless they go unexpectedly well. In the case they go surprisingly well, feel free to <a href="#">donate here</a>.
     </p>
     <hr/>
-    <div class="grid3">
+    <div class="footergrid">
       <section>
         <h5>About Mismatch.com</h5>
         <ul>
@@ -136,8 +136,8 @@
       </section>
     </div>
 
-    
-    <div class="grid4">
+    <!-- 
+    <div class="footergrid2">
       <section>
         <a href="#" id="drop1" class="header" onclick="return false;">
           <h5>About Mismatch.com <span>+</span></h5>
@@ -191,6 +191,7 @@
         </ul>
       </section>
     </div>
+  -->
 
     <div class="finalNotes">
       <p>This project was coded by <a href="https://github.com/marcelomariduena" target="_blank">Marcelo Mariduena</a></p>
